# sample-mobile-app

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: firebase-test-lab.yml  mobile-qa.yml
app/: README.md
config/: settings.yaml
pages/: base_page.py  home_page.py  login_page.py
scripts/: create_github_pr_on_success.py  create_jira_from_junit.py  run_firebase_test_lab.py
tests/: conftest.py  test_app.py  test_create_jira_from_junit.py  test_demo.py  test_login_flow.py  test_notifications.py
utils/: app_flow.py  config.py  driver_factory.py  github_client.py  jira_client.py  locators.py  logger.py  notifications.py  reporting.py
